# aurel

./: .buildinfo  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/badges/: coverage.json
.github/workflows/: draft-pdf.yml  gh-pages.yml  test-build.yml  update-code.yml
_modules/: index.html
_modules/aurel/: core.html  coreanalytic.html  coresymbolic.html  finitedifference.html  maths.html  numerical.html  reading.html  time.html
_modules/aurel/solutions/: Collins_Stewart.html  Conformally_flat.html  EdS.html  Harvey_Tsoubelis.html  ICPertFLRW.html  LCDM.html  Non_diagonal.html  Rosquist_Jantzen.html  Schwarzschild_isotropic.html  Szekeres.html
_sources/: index.rst.txt
_sources/notebooks/: Analytic_check.ipynb.txt  Example.ipynb.txt  Example_over_time.ipynb.txt  Example_symbolic.ipynb.txt  Gravitational_Waves.ipynb.txt  ICPertFLRW.ipynb.txt  Schwarzschild_check.ipynb.txt  tov_ET.ipynb.txt
_sources/paper/: paper.md.txt
_sources/source/: CONTRIBUTING.md.txt  advice.rst.txt  core.rst.txt  finitedifference.rst.txt  numerical.rst.txt  time.rst.txt
_static/: custom.css
docs/: conf.py  index.rst  notes.txt  requirements.txt
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/source/: core.doctree  coreanalytic.doctree  finitedifference.doctree  maths.doctree  numerical.doctree  reading.doctree  solutions.doctree
docs/_build/html/: .buildinfo  index.html  search.html  searchindex.js
docs/_build/html/_modules/aurel/: core.html  coreanalytic.html  reading.html
docs/_build/html/source/: coreanalytic.html  finitedifference.html  numerical.html  reading.html
docs/_static/: custom.css  custom.js
docs/notebooks/: Analytic_check.ipynb  Example.ipynb  Example_over_time.ipynb  Gravitational_Waves.ipynb  ICPertFLRW.ipynb  Schwarzschild_check.ipynb  docinspect.ipynb  tov_ET.ipynb
docs/paper/: arXiv_paper.aux  arXiv_paper.blg  arXiv_paper.out  arXiv_paper.sh  arXiv_paper.tex  paper.bib  paper.md  paper.tex
docs/source/: README.md  advice.rst  core.rst  coresymbolic.rst  generate_rst.py  generate_rstsymbolic.py  reading.rst  readme_sections.rst  time.rst
notebooks/: Analytic_check.html  Analytic_check.ipynb  Example.html  Example.ipynb  Example_over_time.html  Example_symbolic.html  GW.ipynb  Gravitational_Waves.html  ICPertFLRW.html  ICPertFLRW.ipynb  Schwarzschild_check.html  Schwarzschild_check.ipynb  docinspect.ipynb  tov_ET.html  tov_ET.ipynb
paper/: paper.html
site/: genindex.html  objects.inv  py-modindex.html  searchindex.js
site/.doctrees/: environment.pickle  index.doctree
site/.doctrees/source/: core.doctree  finitedifference.doctree  maths.doctree  numerical.doctree  reading.doctree  solutions.doctree
site/_modules/: index.html
site/_modules/aurel/: core.html  coreanalytic.html  finitedifference.html  maths.html  numerical.html  reading.html
site/_modules/aurel/solutions/: EdS.html  Schwarzschild_isotropic.html  Szekeres.html
site/_sources/source/: core.rst.txt  coreanalytic.rst.txt  maths.rst.txt  solutions.rst.txt
site/_static/: documentation_options.js
site/source/: core.html  coreanalytic.html  finitedifference.html  maths.html  solutions.html
source/: CONTRIBUTING.html  README.html  advice.html  core.html  coreanalytic.html  coresymbolic.html  finitedifference.html  maths.html  numerical.html  reading.html  readme_sections.html  solutions.html  time.html
src/aurel/: __init__.py  core.py  coreanalytic.py  coresymbolic.py  finitedifference.py  maths.py  numerical.py  parameters.py  reading.py  time.py
src/aurel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/aurel/data/: descriptions.yml  symbolic_descriptions.yml  var_mappings.yml
src/aurel/solutions/: Collins_Stewart.py  Conformally_flat.py  EdS.py  Harvey_Tsoubelis.py  ICPertFLRW.py  LCDM.py  Non_diagonal.py  Rosquist_Jantzen.py  Schwarzschild_isotropic.py  Szekeres.py  __init__.py
src/aurel/utils/: __init__.py  descriptions.py  jupyter.py  memory.py
tests/: __init__.py  test_aurel_functions.py  test_docstrings.py  test_finitedifference.py  test_numerical.py  test_over_time.py  test_reading.py  test_solutions.py  test_utils_memory.py
tests/fixtures/test_onefile_grouped/output-0000/test_onefile_grouped/: admbase-lapse.h5  admbase-shift.h5
tests/fixtures/test_onefile_grouped/output-0001/: test_onefile_grouped.par
tests/fixtures/test_onefile_grouped/output-0001/test_onefile_grouped/: admbase-lapse.h5  admbase-shift.h5
tests/fixtures/test_onefile_grouped/output-0002/test_onefile_grouped/: admbase-lapse.h5  admbase-shift.h5
tests/fixtures/test_onefile_ungrouped/output-0000/: test_onefile_ungrouped.par
tests/fixtures/test_onefile_ungrouped/output-0000/test_onefile_ungrouped/: alp.h5  betax.h5  betay.h5  betaz.h5
tests/fixtures/test_onefile_ungrouped/output-0001/test_onefile_ungrouped/: alp.h5  betax.h5  betay.h5  betaz.h5
tests/fixtures/test_onefile_ungrouped/output-0002/test_onefile_ungrouped/: alp.h5  betax.h5  betay.h5  betaz.h5
tests/fixtures/test_proc_grouped/output-0000/test_proc_grouped/: admbase-lapse.file_0.h5  admbase-lapse.file_1.h5  admbase-lapse.file_2.h5  admbase-lapse.file_3.h5  admbase-lapse.file_4.h5  admbase-lapse.file_5.h5  admbase-lapse.file_6.h5  admbase-lapse.file_7.h5  admbase-shift.file_0.h5  admbase-shift.file_1.h5  admbase-shift.file_2.h5  admbase-shift.file_3.h5  admbase-shift.file_4.h5  admbase-shift.file_5.h5  admbase-shift.file_6.h5  admbase-shift.file_7.h5
tests/fixtures/test_proc_grouped/output-0001/test_proc_grouped/: admbase-lapse.file_0.h5  admbase-lapse.file_1.h5  admbase-lapse.file_2.h5  admbase-lapse.file_3.h5  admbase-lapse.file_4.h5  admbase-lapse.file_5.h5  admbase-lapse.file_6.h5  (+11 more)
tests/fixtures/test_proc_grouped/output-0002/: test_proc_grouped.par
tests/fixtures/test_proc_ungrouped/output-0000/: test_proc_ungrouped.par
(+62 files in other folders)
