[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aurel"
version = "0.8.2"
description = "A Python package for general relativity calculations."
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]

authors = [
    { name = "Robyn L Munoz", email = "r.l.munoz@sussex.ac.uk" }
]

keywords = [
    "numerical relativity", 
    "general relativity", 
    "simulation",
    "Python", 
    "tensor"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
requires-python = ">=3.8"

dependencies = [
    "numpy",
    "matplotlib",
    "sympy",
    "h5py",
    "glob2",
    "scipy",
    "ipython",
    "tqdm",
    "jupyter",
    "ipykernel"
]

[project.urls]
Source = "https://github.com/robynlm/aurel"
Documentation = "https://robynlm.github.io/aurel/"

[project.optional-dependencies]
test = ["pytest"]
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--verbose"
]