[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aurel"
version = "0.9.1"
description = "A Python package for general relativity calculations."
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]

authors = [
    { name = "Robyn L Munoz", email = "r.l.munoz@sussex.ac.uk" }
]

keywords = [
    "numerical relativity", 
    "general relativity", 
    "simulation",
    "Python", 
    "tensor"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
requires-python = ">=3.11"
# If this changes, update the index shield

dependencies = [
    "numpy",
    "matplotlib",
    "sympy",
    "h5py",
    "scipy",  # Requires Python >= 3.11
    "ipython",
    "tqdm",
    "jupyter",
    "ipykernel",
    "pyyaml"
]

[project.urls]
Source = "https://github.com/robynlm/aurel"
Documentation = "https://robynlm.github.io/aurel/"

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
docs = [
    "sphinx>=8.0",
    "sphinx-rtd-theme",
    "sphinx-math-dollar",
    "myst-nb",
    "myst-parser",
    "sphinx-design"
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["*.ipynb_checkpoints", "*.ipynb_checkpoints.*"]

[tool.setuptools.package-data]
"*" = ["!.ipynb_checkpoints/*"]
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--verbose"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    # Using uppercases for physics and GR conventions
    "N802", "N803", "N806", "N811", "N816", "N813", "N814", "N999",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"docs/notebooks/*.ipynb" = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
